Fix overlap between image and score container

--- a/styles.css
+++ b/styles.css
@@ -76,9 +76,9 @@ header {
 }
 
 #score-container {
-    height: 8rem;
     text-align: center;
     padding: 2rem;
+    margin-bottom: 1rem;
 }
 
 #score-heading {
